trunk/Archive2/fc/e340725ab31872/output
main.cpp:1:22: error: 'foo_result' does not name a type
 template<typename T> foo_result FooCall(T&& t) {
                      ^
main.cpp:20:1: error: 'foo_Result' does not name a type
 foo_Result foo_dothing()
 ^
